adicionada documentação da rota de remoção de um filme
