# src/server.ts
@@ -86,7 +86,7 @@ app.delete("/movies/:id", async (req, res) => {
     } catch {
         return res.status(500).send({ message: "Não foi possível remover o filme" });
     }
-    res.status(200).send();
+    res.status(200).send({message: "Filme removido com sucesso"});
 
 });
 app.get("/movies/:genderName", async (req, res) => {
